# datawave-cli

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.config/: pycodestyle
.github/workflows/: python_package.yaml
src/: __init__.py
src/datawave_cli/: __init__.py  accumulo_interactions.py  authorizations_interactions.py  base_interactions.py  dictionary_interactions.py  generate_html.py  ingest_interactions.py  main.py  query_interactions.py
src/datawave_cli/resources/: sample.json  sample.txt  template.html
src/datawave_cli/utilities/: cli_stuff.py  pod_information.py  pods.py  utilities.py
src/tests/: __init__.py  test_accumulo_interactions.py  test_authorization_interactions.py  test_base_interactions.py  test_dictionary_interactions.py  test_ingest_interactions.py  test_query_interactions.py  utils.py
src/tests/resources/: dict_parameters.json  dict_parameters.yaml  query_parameters.json  test_dict_data.json
