[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datawave_cli"
version = "1.0.3"
dependencies = [
    "requests",
    "kubernetes",
    "pandas",
    "argparse",
]

[project.optional-dependencies]
pytest = [
    "pytest",
    "pytest-mock"
]

[project.scripts]
datawave = "datawave_cli.main:main"