[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datawave_cli"
version = "1.0.5"
dependencies = [
    "requests",
    "kubernetes",
    "pandas",
    "argparse",
    "click"
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-mock"
]

[project.scripts]
datawave = "datawave_cli.main:main"